<resources>
    <string name="app_name">Maestro</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="play">Play</string>
    <string name="notation">Notation</string>
    <string name="profile_image_button">profile image button</string>
    <string name="learn_image_button">Learn Image Button</string>
    <string name="play_image_button">Play Image Button</string>
    <string name="learn">Learn</string>
    <string name="rhythm">Rhythm</string>
    <string name="dynamics">Dynamics</string>
    <string name="understand_the_basics_of_music_theory">Understand the basics of music theory</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Test" />
    <string name="test">Test</string>
    <string name="header" />
</resources>
