<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00C4FF"
    tools:context=".MainActivity">




    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/ProfileLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ProfileButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:contentDescription="@string/profile_image_button"
                android:onClick="Profile_nav"
                android:src="@drawable/profile_image_small" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LearnLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/LearnButton"
                android:layout_width="wrap_content"
                android:layout_height="84dp"
                android:layout_gravity="start"
                android:background="@drawable/round_button"
                android:contentDescription="@string/learn_image_button"
                android:onClick="Learn_nav_button"
                android:src="@drawable/quaver_button_small" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/PlayLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|end"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/PlayButton"
                android:layout_width="wrap_content"
                android:layout_height="87dp"
                android:layout_gravity="start"
                android:background="@drawable/round_button"
                android:contentDescription="@string/play_image_button"
                android:onClick="Play_nav"
                android:src="@drawable/small_two_quavers" />
        </LinearLayout>

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/MainPager"
        android:layout_width="411dp"
        android:layout_height="602dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="44dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>